Changes for v2.09
-- Private build 1
- Set IrpTransmogrifier 1.1.0 as default IR decoder, with DecodeIR as selectable option (Graham)
- Make conversion of learned signals to device upgrade be reliable, and available only with IrpTransmogrifier (Graham)
- Improve summary menu, adding new items to view and save last created summary (Graham)
- Fix bug affecting some macros on URC-7935 (Graham)

Changes for v2.08
-- Release build 1
- Include Rob's major revision of protocols.ini (Rob & Graham)
- Fix poor coding causing numerous spurious error messages about missing parameter values (Graham)
- Comment out the messages in Protocol.java about generating deviceImporters as they produce numerous irrelevant messages (Graham)
- Add messages into rmaster.err concerning loading of protocols, and others to improve readability (Graham)
- Fix bug preventing Key Move dialog from accepting setup codes > 2047 where permitted (Graham)
- Fix bug preventing Key Move dialog error message appearing for setup code out of range (Graham)
-- Private build 2
- In disassembly of S3C80/S3F80 code indeterminate between the two, use RDF to determine start address (Graham)
- Update build.xml to include jp1usb v0.04 in the distribution package (Graham)
- Use invokeLater(...) in RemoteMaster.setInterfaceState(...) to avoid concurrency problems with progress bar (Graham)
-- Private build 3
- In generalFunction.accept(), accept activity macro that also has users (Graham)
- In RemoteConfiguration.decodeItem(...), support macroref tag adding activity to macro that already has users (Graham)
-- Private build 4
- Improve the fix to RemoteConfiguration.decodeItem(...) made in build 3 (Graham)
- Update Macro.store(PropertyWriter) to handle macros that are both activity and key macros (Graham)
- Update RemoteConfiguration.parse(PropertyWriter) to handle the Macro.store(...) update (Graham)
-- Private build 5
- Make MacroPanel.editMacro(...) preserve any assignment of the macro to an activity (Graham)