@@ -560,6 +560,7 @@ Note (BM): These two entries was one in the original document; I split it into t
         <irp:parameter name="uei-executor">00C9</irp:parameter>
         <irp:parameter name="uei-executor"><![CDATA[001F[D&239,S&254,3,1;D:1:4,S:1,F]]]></irp:parameter>
 	<irp:parameter name="uei-executor"><![CDATA[001F:8(Panasonic VCR Combo)[D&239,S&254,3,1;D:1:4,S:1,F]]]></irp:parameter>
+	<irp:parameter name="uei-executor">001F:8(Panasonic Mixed Combo;;D.S=1.0,0.0,0.1,0.2,0.3.0.4,1.1,1.2,1.3,1.4,2.0,2.2,2.3,2.4,3.0,3.3,3.4,4.0,4.4,5.0)[D?0D,D?1D|||S?0S,D?2D|||S?1S,D?3D|||S?2S,D?4D|||S?3S,D?5D|||S?4S,3,1;??D,??S,F]</irp:parameter>
 	<irp:parameter name="uei-executor">01C9[;D,S,F]</irp:parameter>
         <irp:irp><![CDATA[{37k,432}<1,-1|1,-3>(8,-4,3:8,1:8,D:8,S:8,F:8,(D^S^F):8,1,-173)* [D:0..255,S:0..255,F:0..255]]]></irp:irp>
         <irp:documentation>
@@ -853,8 +854,9 @@ Note (BM): These two entries was one in the original document; I split it into t
     </irp:protocol>
     <irp:protocol c-name="Panasonic" name="Panasonic">
         <irp:parameter name="uei-executor">00C9</irp:parameter>
-        <irp:parameter name="uei-executor"><![CDATA[001F[D&239,S&254;~D:1:4,S:1,F]]]></irp:parameter>
-	<irp:parameter name="uei-executor"><![CDATA[001F:8(Panasonic VCR Combo)[D&239,S&254;~D:1:4,S:1,F]]]></irp:parameter>
+        <irp:parameter name="uei-executor"><![CDATA[001F[D&239,S&254,2,32;~D:1:4,S:1,F]]]></irp:parameter>
+	<irp:parameter name="uei-executor"><![CDATA[001F:8(Panasonic VCR Combo)[D&239,S&254,2,32;~D:1:4,S:1,F]]]></irp:parameter>
+	<irp:parameter name="uei-executor">001F:8(Panasonic Mixed Combo;;D.S=1.0,0.0,0.1,0.2,0.3.0.4,1.1,1.2,1.3,1.4,2.0,2.2,2.3,2.4,3.0,3.3,3.4,4.0,4.4,5.0)[D?0D,D?1D|||S?0S,D?2D|||S?1S,D?3D|||S?2S,D?4D|||S?3S,D?5D|||S?4S,2,32;??D,??S,F]</irp:parameter>
 	<irp:parameter name="uei-executor">00CD:2[D;S,F]</irp:parameter>
 	<irp:parameter name="uei-executor">00CD:JP1[D;S,F]</irp:parameter>
         <irp:parameter name="prefer-over">Kaseikyo</irp:parameter>
@@ -898,13 +900,16 @@ Note (BM): These two entries was one in the original document; I split it into t
     </irp:protocol>
     <irp:protocol c-name="Pioneer" name="Pioneer">
         <irp:parameter name="uei-executor">00E2(;S==~D)[D,F]</irp:parameter>
+	<irp:parameter name="uei-executor">007E:4[D?0,D?1,D?2,D?3;0,0,??,F]</irp:parameter>
+	<irp:parameter name="uei-executor">007E:5[D?0,D?1,D?2,D?3;0,0,??,F]</irp:parameter>
         <irp:irp><![CDATA[{40k,564}<1,-1|1,-3>(16,-8,D:8,S:8,F:8,~F:8,1,^108m)* [D:0..255,S:0..255=255-D,F:0..255]]]></irp:irp>
         <irp:documentation>Pioneer is distinguished from <a href="#NEC2">NEC2</a> only by frequency.  So if your learning system does not learn frequency accurately, it won't accurately distinguish Pioneer from NEC2.  All Pioneer signals should have a device number in the range 160 to 175 and no subdevice.  No NEC2 signal should fit those rules.  So you usually can determine whether the decision (by frequency) was wrong by checking the device numbers.
 
 Many Pioneer commands are sent as combinations of two different Pioneer signals.  This version of DecodeIr does not associate the two signals together into one command. It decodes them separately. If you get more than one of the same OBC from decoding a learned signal, that just means the learning system failed to understand the repeat pattern. It does not mean a two part signal. But if there are two different OBCs (with the same or different device numbers) you have a two part Pioneer signal.</irp:documentation>
     </irp:protocol>
     <irp:protocol c-name="PioneerMix" name="Pioneer-Mix">
-    <!--irp:parameter name="uei-executor">007E:5</irp:parameter-->
+    <irp:parameter name="uei-executor">007E:4[D0,F0?1,F0?2,F0?3,F0?4,D;1,??,4,F]</irp:parameter>
+    <irp:parameter name="uei-executor">007E:5[D0,D?1D|||F0?1F,D?2D|||F0?2F,D?3D|||F0?3F,F0?4F,D?4D;1,??F,??D,F]</irp:parameter>
         <irp:irp><![CDATA[{40k,564}<1,-1|1,-3>(16,-8,D0:8,~D0:8,F0:8,~F0:8,1,^108m,(16,-8,D:8,~D:8,F:8,~F:8,1,^108m)+) [D0:0..255,F0:0..255,D:0..255=D0,F:0..255=F0]]]></irp:irp>
         <irp:documentation>Two-signal version of the <a href="#Pioneer">Pioneer</a> protocol;
         first sends the "normal" signal (parameters D0 and F0), then, as repeat, the one determined by D and F.</irp:documentation>
@@ -1216,6 +1221,11 @@ Here we follow the Pronto form, which is also consistent with DecodeIR.
     </irp:protocol>
     <irp:protocol c-name="Sony8" name="Sony8">
         <irp:irp><![CDATA[{40k,600}<1,-1|2,-1>(4,-1,F:8,^45m)[F:0..255]]]></irp:irp>
+        <irp:documentation/>
+    </irp:protocol>
+    <irp:protocol c-name="SonyDSP" name="SonyDSP">
+        <irp:parameter name="uei-executor">01FF:JP1DSP[;F]</irp:parameter>
+        <irp:irp><![CDATA[{40k,600}<1,-1|2,-1>((4,-1,96:7,36:8,^45m)3,(4,-1,195:8,^45m),(4,-1,81:8,^45m),(4,-1,F:8,^45m),(4,-1,96:7,36:8,^45m))[F:0..255]]]></irp:irp> 
         <irp:documentation/>
     </irp:protocol>
     <irp:protocol c-name="StreamZap" name="StreamZap">
